feat: support client-reached label printing
